syntax = "proto3";
package Reflect;

option csharp_namespace = "Unity.Reflect.Model";
import "Color.proto";
import "Mathematics.proto";

message SyncMaterial {
	string name = 1;

	SyncColor tint = 2;

	SyncColor albedoColor = 3;
	SyncMap albedoMap = 4;
	float albedoFade = 5;

	float alpha = 6;
	SyncMap alphaMap = 7;

	SyncMap normalMap = 8;
	float normalScale = 9;

	SyncMap cutoutMap = 10;
	float cutoutThreshold = 11;

	float glossiness = 12;
	SyncMap glossinessMap = 13;

	float metallic = 14;
	SyncMap metallicMap = 15;

	SyncColor emission = 16;
	float emissionTemperature = 17;
	SyncMap emissionMap = 18;
}

message SyncMap {
	string texture = 1;

	SyncFloat2 offset = 2;
	SyncFloat2 tiling = 3;
	float brightness = 4;
	bool invert = 5;
	float rotationDegrees = 6;
}